fixed colors to make it more visually appealing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,12 +44,12 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #aaaaaa;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #ff6f67;
   color: white;
 }
 
